--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -77,8 +77,8 @@
     display: flex;
     justify-content: center;
     font-weight: bold;
-    color: rgba(74, 247, 58, 0.5);
-    border: 1px solid rgba(74, 247, 58, 0.5);
+    color: rgba(31, 129, 22, 0.5);
+    border: 1px solid rgba(31, 129, 22, 0.5);
     background-color: transparent;
     margin-bottom: 10px;
 }
@@ -99,3 +99,28 @@
     width: 100%;
 }
 
+.cuestionarioContainer {
+    width: 80vw;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+}   
+
+.readOnly {
+    width: 40vw;
+    text-align: center;
+}
+
+.searchButton {
+    align-items: center;
+    width: 5vw;
+}
+
+.searchButton:hover {
+    background-color: transparent;
+    border: 1px solid rgb(65, 134, 180);
+}
+
+.searchButton:active {
+    background-color: transparent;
+}
